[tool]
[tool.poetry]
name = "exists"
version = "0.1.0"
description = "Check if a variable or other object exists."
authors = ["Tom A. <14287229+TensorTom@users.noreply.github.com>"]
homepage = "https://github.com/TensorTom/exists"
repository = "https://github.com/TensorTom/exists"
keywords = ["exists", "exist", "variable", "object", "check", "python"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
datafunc = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
